--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -5,8 +5,8 @@
 		<title>Discord Bot</title>
 	<meta name="author" content="gavwin">
 	<meta name="description" content="Discord Bot">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="animate.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	</head>
 	<body>
