--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -13,7 +13,7 @@
 		<center>
 			<h1 class="animated fadeInDown">Discord Bot</h1>
 				<img class="animated fadeIn circular" src="http://i.imgur.com/9eld4BD.jpg" height="90px" width="270px">
-      <h1 class="animated fadeInUp"><a href="#">&#10162 Invite me!</a></h1>
+      <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
       <footer style="bottom: 0;">Site made by <a href="https://github.com/gavwin">gavwin</a></footer>
 		</center>
