--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -14,8 +14,8 @@
 			<h1 class="animated fadeInDown">Discord Bot</h1>
 				<img class="animated fadeIn circular" src="http://i.imgur.com/9eld4BD.jpg" height="90px" width="270px">
       <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
+	</center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
-      <footer>Site made by <a href="https://github.com/gavwin">gavwin</a></footer>
-		</center>
+		<footer><p class="bottom">Site made by <a href="https://github.com/gavwin">gavwin</a></p></footer>
 	</body>
 </html>
