--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<center>
 			<h1 class="animated fadeInDown">Discord Bot</h1>
-				<img class="animated fadeIn circular" src="http://i.imgur.com/9eld4BD.jpg" height="90px" width="270px">
+				<img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
       <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
 	</center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
