--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Discord Bot</title>
-	<meta name="author" content="gavwin">
-	<meta name="description" content="Discord Bot">
-	<link rel="stylesheet" type="text/css" href="main.css">
-  <link rel="stylesheet" href="animate.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-	</head>
-	<body>
-		<center>
-			<h1 class="animated fadeInDown">Discord Bot</h1>
-				<img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
-      <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
-	</center>
+   <head>
+      <meta charset="UTF-8">
+      <title>Discord Bot</title>
+      <meta name="author" content="gavwin">
+      <meta name="description" content="Discord Bot">
+      <link rel="stylesheet" type="text/css" href="main.css">
+      <link rel="stylesheet" href="animate.css">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+   </head>
+   <body>
+      <center>
+         <h1 class="animated fadeInDown">Discord Bot</h1>
+         <img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
+         <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
+      </center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
-	<p class="footer">Site made by <a href="https://github.com/gavwin">gavwin</a></p>
-	</body>
+      <p class="animated fadeIn footer">Site made by <a href="https://github.com/gavwin">gavwin</a></p>
+   </body>
 </html>
