--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -16,6 +16,6 @@
          <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
       </center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
-      <p class="animated fadeIn footer">Site made by <a href="https://github.com/gavwin">gavwin</a></p>
+      <div class="animated fadeIn footer">Site made by <a href="https://github.com/gavwin">gavwin</a></div>
    </body>
 </html>
