--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8">
-      <title>Discord Bot</title>
+      <title>Discord Bot a</title>
       <meta name="author" content="gavwin">
       <meta name="description" content="Discord Bot">
       <link rel="stylesheet" type="text/css" href="main.css">
