--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -12,7 +12,17 @@
    <body>
       <center>
          <h1 class="animated fadeInDown">Discord Bot</h1>
+         <div id="container">
+            <div id="left">
          <img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
+            </div>
+            <div id="center">
+               <h1 class="animated fadeIn botTag">Discord Bot</h1>
+            </div>
+            <div id="right">
+         <img src="a">
+            </div>
+         </div>
          <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
       </center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
