--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <center>
-         <h1 class="animated fadeInDown">Discord Bot</h1>
+         <h1 class="animated fadeInDown">Discord Bote</h1>
             <div id="left">
          <img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
             </div>
