--- a/discord-bot-website-template/index.html
+++ b/discord-bot-website-template/index.html
@@ -12,6 +12,7 @@
    <body>
       <center>
          <h1 class="animated fadeInDown">Discord Bote</h1>
+      </center>
             <div id="left">
          <img class="animated fadeIn circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024">
             </div>
@@ -21,6 +22,7 @@
             <div id="right">
          <img src="a">
          </div>
+      <center>
          <h1 class="animated fadeInUp"><a href="#">&#10162; Invite me!</a></h1>
       </center>
       <!--DO NOT REMOVE THE FOOTER, OTHERWISE YOU DO NOT HAVE PERMISSION TO USE THIS TEMPLATE!-->
