--- a/Hypixel-Censorship/index.html
+++ b/Hypixel-Censorship/index.html
@@ -5,6 +5,9 @@
     <title>Hypixel Censorship</title>
   </head>
   <body>
-  <center></center>
+    <center><h1>Dear Hypixel players and staff,</h1>
+    <p>
+Recently I've encountered some issues regarding the freedom of speech here on the Hypixel Network. A few players and I have exposed multiple staff members, and have made posts about it, but they were immediately taken down by the staff that were exposed in these posts. Under the "Respect All Staff Members" section in the official rules</p>
+    </center>
   </body>
 </html>
