--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.0.5) (latest)
+    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.1.0) (latest)
         <br>A command line mystery game created by <a target="_blank" href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a target="_blank" href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -57,41 +57,43 @@
                  var $this = $(this),
                      val = $this.val().toLowerCase();
                  $this.focus().val("");
+                 var valArgs = $this.val();
+                 var said = `gavin@localhost:~$ ${valArgs}<br>`;
                  if (val === "") {
                      $out.append("gavin@localhost:~$<br>");
                  } else
                  if (val === "help") {
-                     $out.append("gavin@localhost:~$ help<br>");
+                     $out.append(said);
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append("gavin@localhost:~$ inbox<br>");
+                     $out.append(said);
                      $out.append("Your Inbox:<br>↳ need your help<br>");
                  } else
                  if (val === "concept") {
-                     $out.append("gavin@localhost:~$ concept<br>");
+                     $out.append(said);
                      $out.append("How this game works:<br>In this game, you are to navigate through the terminal / command line to find files, messages and more <br>in order to shut down terrorist groups, espionages and hackers from doing bad.<br>Start by running the command 'help'<br>");
                  } else
                  if (val === "clear") {
                      $out.empty();
                  } else
                  if (val.startsWith("show")) {
-                     if (!cmds.includes(val.toLowerCase())) {
-                         $out.append(`gavin@localhost:~$ ${val}<br>`);
-                         $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.<br>`);
+                     if (!cmds.includes(val)) {
+                         $out.append(said);
+                         $out.append(`Could not find a file / message with the name of '${valArgs.substring(5)}'.<br>`);
                      }
                      if (val === "show need your help") {
-                         $out.append("gavin@localhost:~$ show need your help<br>");
+                         $out.append(said);
                          $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                      } else if (val === "show") {
-                         $out.append("gavin@localhost:~$ show<br>");
+                         $out.append(said);
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
                      if(val.startsWith("connect")) {
                        if(val === "connect root m4sk") {
                          var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
-                         $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                         $out.append(said);
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
                          setTimeout(function() { $out.append("."); }, 2000);
@@ -100,14 +102,14 @@
                          setTimeout(function() { $out.append("."); }, 5000);
                          setTimeout(function() { window.location.href = m4skRandom; }, 5100);
                        } else if(val === "connect") {
-                         $out.append("gavin@localhost:~$ connect<br>");
+                         $out.append(said);
                          $out.append("Specify a host and password to connect to.<br>");
                        } else if(!cmds.includes(val)) {
-                         $out.append(`gavin@localhost:~$ ${val.substring(8)}<br>`);
+                         $out.append(`gavin@localhost:~$ ${valArgs.substring(8)}<br>`);
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
-                       $out.append(`gavin@localhost:~$ ${val}<br>`);
+                       $out.append(said);
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
