--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -49,15 +49,17 @@
                  var $this = $(this),
                      val = $this.val();
                  $this.focus().val("");
+                 var valArgs = $this.val();
+                 var said = `root@m4sk:~$ ${valArgs}<br>`;
                  if (val === "") {
                      $out.append("root@m4sk:~$<br>");
                  } else
                  if (val === "help") {
-                     $out.append("root@m4sk:~$ help<br>");
+                     $out.append(said);
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>exit - Exits and connects you back to gavin@localhost.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append("root@m4sk:~$ inbox<br>");
+                     $out.append(said);
                      $out.append("Your Inbox:<br>↳ it's time<br>");
                  } else
                  if (val === "clear") {
@@ -65,19 +67,19 @@
                  } else
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
-                         $out.append(`root@m4sk:~$ ${val}<br>`);
+                         $out.append(said);
                          $out.append(`Could not find a file / message with the name of ${val.substring(5)}.<br>`);
                      }
                      if (val === "show it's time") {
-                         $out.append("root@m4sk:~$ show it's time<br>");
+                         $out.append(said);
                          $out.append("Viewing the content of it's time:<br>To all M.A.S.K. members,<br>    In exactly 24 hours of this message being sent out, it will be time<br>to take action against the Peruvian Government as planned.<br>This mission has to be our best, as we all know the poor results of what happened last time.<br> - Shadow<br>");
                      } else if (val === "show") {
-                         $out.append("root@m4sk:~$ show<br>");
+                         $out.append(said);
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
                        if(val === "exit") {
-                         $out.append("root@m4sk:~$ exit<br>");
+                         $out.append(said);
                          $out.append("Successfully exited.<br>");
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
@@ -87,7 +89,7 @@
                          setTimeout(function() { $out.append("."); }, 5000);
                          setTimeout(function() { window.location.href = "https://gavwin.github.io/Terminal%20Mystery/1"; }, 5100);
                      } else {
-                       $out.append(`gavin@localhost:~$ ${val}<br>`);
+                       $out.append(said);
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
