--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.1.2) (latest)
+    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.1.25) (latest)
         <br>A command line mystery game created by <a target="_blank" href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a target="_blank" href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -75,7 +75,7 @@
                      $out.append(said);
                      $out.append("How this game works:<br>In this game, you are to navigate through the terminal / command line to find files, messages and more <br>in order to shut down terrorist groups, espionages and hackers from doing bad.<br>Start by running the command 'help'<br>");
                  } else
-                 if (val === "clear") {
+                 if (valArgs === "clear") {
                      $out.empty();
                  } else
                  if (val.startsWith("show")) {
