--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -75,7 +75,7 @@
                      $out.append(said);
                      $out.append("How this game works:<br>In this game, you are to navigate through the terminal / command line to find files, messages and more <br>in order to shut down terrorist groups, espionages and hackers from doing bad.<br>Start by running the command 'help'<br>");
                  } else
-                 if (valArgs === "clear") {
+                 if (val === "clear") {
                      $out.empty();
                  } else
                  if (val.startsWith("show")) {
