--- a/Terminal Mystery/1.html
+++ b/Terminal Mystery/1.html
@@ -11,7 +11,6 @@
     <meta name="keywords" content="keywords,here">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="typed.js"></script>
 </head>
 
 <body>
@@ -21,15 +20,6 @@
         <br>gavin@localhost:~$
         <input class="wider"></input>
     </div>
-<!--<div class="element"></div>
-    <script>
-  $(function(){
-      $(".element").typed({
-        strings: ["First sentence.", "Second sentence."],
-        typeSpeed: 0
-      });
-  });
-</script>-->
     
     <script>
  var cmds = [
@@ -49,18 +39,21 @@
  $("#screen input").focus();
  $("#screen input").on("keydown", function(event) {
              if (event.which === 13) { // Enter key pressed
-                 var $this = $(this),
-                     val = $this.val();
+                var $this = $(this),
+                     valArgs = $this.val();
                  $this.focus().val("");
+                 var val = valArgs.toLowerCase();
+                 var said = `gavin@localhost:~$ ${valArgs}<br>`;
+                 
                  if (val === "") {
-                     $out.append("gavin@localhost:~$<br>");
+                     $out.append(said);
                  } else
                  if (val === "help") {
-                     $out.append("gavin@localhost:~$ help<br>");
+                     $out.append(said);
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append("gavin@localhost:~$ inbox<br>");
+                     $out.append(said);
                      $out.append("Your Inbox:<br>↳ need your help<br>↳ good job<br>");
                  } else
                  if (val === "clear") {
@@ -68,19 +61,19 @@
                  } else
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
-                         $out.append(`gavin@localhost:~$ ${val}<br>`);
+                         $out.append(said);
                          $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.<br>`);
                      }
                      if (val === "show need your help") {
-                         $out.append("gavin@localhost:~$ show need your help<br>");
+                         $out.append(said);
                          $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                      } 
                      if (val === "show good job") {
-                         $out.append("gavin@localhost:~$ show good job<br>");
+                         $out.append(said);
                          $out.append("Viewing the content of good job:<br>Dear Gavin,<br>    Great job getting into one of M.A.S.K.'s computers. We now know what they plan<br>and with some more evidence we can completley trump their mission.<br>You can try rooting around on their computer more, try finding any other files that could give us more information.<br>Best of luck,<br>Mike<br>");
                      }
                      else if (val === "show") {
-                         $out.append("gavin@localhost:~$ show<br>");
+                         $out.append(said);
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
@@ -102,7 +95,7 @@
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
-                       $out.append(`gavin@localhost:~$ ${val}<br>`);
+                       $out.append(said);
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
