--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.1.45) (latest)
+    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.1.5) (latest)
         <br>A command line mystery game created by <a target="_blank" href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a target="_blank" href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -48,21 +48,23 @@
                      valArgs = $this.val();
                  $this.focus().val("");
                  var val = valArgs.toLowerCase();
-                 var said = `gavin@localhost:~$ ${valArgs}<br>`;
+                 function cmdUse() {
+                  $out.append(`gavin@localhost:~$ ${valArgs}<br>`);   
+                 }
                  
                  if (val === "") {
                      $out.append("gavin@localhost:~$<br>");
                  } else
                  if (val === "help") {
-                     $out.append(said);
+                     cmdUse();
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append(said);
+                     cmdUse();
                      $out.append("Your Inbox:<br>↳ need your help<br>");
                  } else
                  if (val === "concept") {
-                     $out.append(said);
+                     cmdUse();
                      $out.append("How this game works:<br>In this game, you are to navigate through the terminal / command line to find files, messages and more <br>in order to shut down terrorist groups, espionages and hackers from doing bad.<br>Start by running the command 'help'<br>");
                  } else
                  if (val === "clear") {
@@ -70,21 +72,21 @@
                  } else
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
-                         $out.append(said);
+                         cmdUse();
                          $out.append(`Could not find a file / message with the name of '${valArgs.substring(5)}'.<br>`);
                      }
                      if (val === "show need your help") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                      } else if (val === "show") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
                      if(val.startsWith("connect")) {
                        if(valArgs === "connect root m4sk" || valArgs === "Connect root m4sk") {
                          var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
                          setTimeout(function() { $out.append("."); }, 2000);
@@ -93,14 +95,14 @@
                          setTimeout(function() { $out.append("."); }, 5000);
                          setTimeout(function() { window.location.href = m4skRandom; }, 5100);
                        } else if(val === "connect") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Specify a host and password to connect to.<br>");
                        } else if(valArgs !== "connect root m4sk" || valArgs !== "Connect root m4sk") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
-                       $out.append(said);
+                       cmdUse();
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
