--- a/Terminal Mystery/1.html
+++ b/Terminal Mystery/1.html
@@ -43,17 +43,19 @@
                      valArgs = $this.val();
                  $this.focus().val("");
                  var val = valArgs.toLowerCase();
-                 var said = `gavin@localhost:~$ ${valArgs}<br>`;
+                 function cmdUse() {
+                  $out.append(`gavin@localhost:~$ ${valArgs}<br>`);   
+                 }
                  
                  if (val === "") {
-                     $out.append(said);
+                     cmdUse();
                  } else
                  if (val === "help") {
-                     $out.append(said);
+                     cmdUse();
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append(said);
+                     cmdUse();
                      $out.append("Your Inbox:<br>↳ need your help<br>↳ good job<br>");
                  } else
                  if (val === "clear") {
@@ -61,26 +63,26 @@
                  } else
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
-                         $out.append(said);
+                         cmdUse();
                          $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.<br>`);
                      }
                      if (val === "show need your help") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                      } 
                      if (val === "show good job") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Viewing the content of good job:<br>Dear Gavin,<br>    Great job getting into one of M.A.S.K.'s computers. We now know what they plan<br>and with some more evidence we can completley trump their mission.<br>You can try rooting around on their computer more, try finding any other files that could give us more information.<br>Best of luck,<br>Mike<br>");
                      }
                      else if (val === "show") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
-                    if(val.startsWith("connect")) {
+                     if(val.startsWith("connect")) {
                        if(valArgs === "connect root m4sk" || valArgs === "Connect root m4sk") {
                          var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
                          setTimeout(function() { $out.append("."); }, 2000);
@@ -89,14 +91,14 @@
                          setTimeout(function() { $out.append("."); }, 5000);
                          setTimeout(function() { window.location.href = m4skRandom; }, 5100);
                        } else if(val === "connect") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append("Specify a host and password to connect to.<br>");
                        } else if(valArgs !== "connect root m4sk" || valArgs !== "Connect root m4sk") {
-                         $out.append(said);
+                         cmdUse();
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
-                       $out.append(said);
+                       cmdUse();
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
