--- a/Terminal Mystery/1.html
+++ b/Terminal Mystery/1.html
@@ -81,7 +81,6 @@
                  } else
                      if(val.startsWith("connect")) {
                        if(valArgs === "connect root m4sk" || valArgs === "Connect root m4sk") {
-                         var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
                          cmdUse();
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
@@ -89,7 +88,7 @@
                          setTimeout(function() { $out.append("."); }, 3000);
                          setTimeout(function() { $out.append("."); }, 4000);
                          setTimeout(function() { $out.append("."); }, 5000);
-                         setTimeout(function() { window.location.href = m4skRandom; }, 5100);
+                         setTimeout(function() { window.location.href = "https://gavwin.github.io/m4sk1"; }, 5100);
                        } else if(val === "connect") {
                          cmdUse();
                          $out.append("Specify a host and password to connect to.<br>");
