--- a/Terminal Mystery/2.html
+++ b/Terminal Mystery/2.html
@@ -83,7 +83,8 @@
                      }
                  } else
                      if(val.startsWith("connect")) {
-                       if(val === "connect root m4sk") {
+                       if(valArgs === "connect root m4sk" || valArgs === "Connect root m4sk") {
+                         var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
                          cmdUse();
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
@@ -91,12 +92,12 @@
                          setTimeout(function() { $out.append("."); }, 3000);
                          setTimeout(function() { $out.append("."); }, 4000);
                          setTimeout(function() { $out.append("."); }, 5000);
-                         setTimeout(function() { window.location.href = "https://gavwin.github.io/Terminal%Mystery/m4sk"; }, 5100);
+                         setTimeout(function() { window.location.href = m4skRandom; }, 5100);
                        } else if(val === "connect") {
-                         $out.append("gavin@localhost:~$ connect<br>");
+                         cmdUse();
                          $out.append("Specify a host and password to connect to.<br>");
-                       } else if(!cmds.includes(val)) {
-                         $out.append(`gavin@localhost:~$ ${val.substring(8)}<br>`);
+                       } else if(valArgs !== "connect root m4sk" || valArgs !== "Connect root m4sk") {
+                         cmdUse();
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
