--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -59,6 +59,9 @@
                      cmdUse();
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
+                 if(val.startsWith(val + "echo")) {
+                     $out.append(valArgs);
+                 }
                  if (val === "inbox") {
                      cmdUse();
                      $out.append("Your Inbox:<br>↳ need your help<br>");
