--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -35,6 +35,7 @@
      "show need your help",
      "connect",
      "connect root m4sk",
+     "echo",
  ];
  var m4skChance = [
      "https://gavwin.github.io/Terminal%20Mystery/m4sk",
