--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -62,7 +62,7 @@
                  } else
                  if(val.startsWith(val + "echo")) {
                      $out.append(valArgs);
-                 }
+                 } else
                  if (val === "inbox") {
                      cmdUse();
                      $out.append("Your Inbox:<br>↳ need your help<br>");
