--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -62,7 +62,7 @@
                  } else
                  if(val.startsWith("echo")) {
                      cmdUse();
-                     $out.append(valArgs + "<br>");
+                     $out.append(valArgs.substring(5) + "<br>");
                  } else
                  if (val === "inbox") {
                      cmdUse();
