--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Terminal Mystery</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="author" content="Gavin Wainwright">
+    <meta name="description" content="description here">
+    <meta name="keywords" content="keywords,here">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <style>
         .blink_me {
   animation: blinker 1s linear infinite;
@@ -8,3 +21,16 @@
   50% { opacity: 0; }
 }
     </style>
+</head>
+
+<body>
+
+    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.1)
+        <br>Type 'help' for a list of commands.
+        <center><span class="blink_me">•</span></center>
+        <div id="output"></div>
+        <br>gavin@localhost:~$
+        <input class="wider"></input>
+    </div>
+    </body>
+</html>
