--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -15,6 +15,7 @@
         .blink_me {
   animation: blinker 1s linear infinite;
             color: red;
+            font-size: 100px;
 }
 
 @keyframes blinker {  
