--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -26,14 +26,15 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.4)
+    <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.5)
         <br>Type 'help' for a list of commands.
        <!-- <center><span class="blink_me">•</span></center> -->
         <div id="output"></div>
         <br>gavin@localhost:~$
         <input class="wider"></input>
     </div>
-    <script>var $out = $("#output");
+    <script>
+             var $out = $("#output");
  $("#screen input").focus();
  $("#screen input").on("keydown", function(event) {
              if (event.which === 13) {
@@ -57,6 +58,9 @@
                      cmdUse();
                      $out.append('not a command<br>');
                  }
+                 $this.val("");
+             }
+ });
     </script>
     </body>
 </html>
