--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -5,6 +5,6 @@
     <title>Teaching Ava to code</title>
   </head>
   <body>
-    <h1>It's my birthday!</h1>
+    <center><h1 style="color: #0072BB">It's my birthday!</h1></center>
   </body>
 </html>
