--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -6,6 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
-    <center><h1 style="color: #0072BB font-family: 'Lobster', cursive;">It's my birthday!</h1></center>
+    <style>
+      h1 {
+        color: #0072BB;
+        font-family: 'Lobster', cursive;
+      }
+    </style>
+    <center><h1>It's my birthday!</h1></center>
   </body>
 </html>
