--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -10,6 +10,7 @@
       h1 {
         color: #0072BB;
         font-family: 'Lobster', cursive;
+        font-size: 100px;
       }
     </style>
     <center><h1>It's my birthday!</h1></center>
