--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -13,6 +13,6 @@
         font-size: 100px;
       }
     </style>
-    <center><h1>It's my birthday!</h1></center>
+    <center><h1>I'm 7 years old</h1></center>
   </body>
 </html>
