--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -50,7 +50,7 @@ background-size: 1800% 1800%;
       }
     </style>
     <div class="wrapper">
-    <center><h1>I'm 7 years old</h1></center>
+    <center><h1>I'm 7 years old.</h1></center>
       </div>
   </body>
 </html>
