--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -55,7 +55,9 @@ background-size: 1800% 1800%;
   document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.element', {
         strings: ["My name is Ava", "and I'm 7 years old."],
-        typeSpeed: 0
+        typeSpeed: 0,
+        loop: false, 
+        loopCount: null
       });
   });
 </script>
