--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -77,7 +77,7 @@ background-size: 1800% 1800%;
       Typed.new('.element', {
         strings: ["My name is Ava", "and I'm 7 years old."],
         typeSpeed: 0,
-        loop: false, 
+        loop: true, 
         loopCount: null
       });
   });
