--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -28,6 +28,7 @@
             <li><a href="/donate">Donate</a></li>
           </ul>
         </div><!--/.nav-collapse -->
+        <div class="rainbow"></div>
         </div>
         </div>
   </body>
