--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -27,11 +27,14 @@
             <li><a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=403041318">Invite</a></li>
             <li><a href="https://discordapp.com/invite/sKCDdfp">Support Server</a></li>
             <li><a href="/features">Features</a></li>
-            <li><a href="/donate">Donate</a></li>
+            <li><a href="https://toastythebot.bigcartel.com">Donate</a></li>
           </ul>
         </div><!--/.nav-collapse -->
         </div>
         </div>
             <div class="rainbow"></div>
+    <center><h1>Toasty</h1>
+      <h3>A discord bot that's useful, fun and delicious!</h3>
+      <div class="typingStats"></div></center>
   </body>
 </html>
