--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -32,9 +32,22 @@
         </div><!--/.nav-collapse -->
         </div>
         </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="typed.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function(){
+      Typed.new('.typedStats', {
+        strings: ["1,300 servers", "64,000 users", "17,000 channels"],
+        typeSpeed: 0,
+        loop: true,
+        loopCount: null,
+        showCursor: true
+      });
+  });
+    </script>
             <div class="rainbow"></div>
     <center><h1>Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
-      <div class="typingStats"></div></center>
+      <div class="typingStats">Serving over </div></center>
   </body>
 </html>
