--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -45,9 +45,10 @@
       });
   });
     </script>
-            <div class="rainbow"></div>
+            <div class="rainbow">
     <center><h1>Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
       <div class="typingStats">Serving over </div></center>
+              </div>
   </body>
 </html>
