--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -36,7 +36,7 @@
     <script src="typed.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function(){
-      Typed.new('.typedStats', {
+      Typed.new('.typingStats', {
         strings: ["1,300 servers", "64,000 users", "17,000 channels"],
         typeSpeed: 0,
         loop: true,
