--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -39,7 +39,7 @@
     <script>
       document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.typingStats', {
-        strings: ["1,300 servers", "64,000 users", "17,000 channels"],
+        strings: ["Serving over 1,300 servers", "Serving over 64,000 users", "Serving over 17,000 channels"],
         typeSpeed: 0,
         loop: true,
         loopCount: null,
@@ -50,7 +50,7 @@
             <div class="rainbow">
     <center><h1>Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
-      <div class="typingStats">Serving over </div></center>
+      <div class="typingStats"></div></center>
               </div>
   </body>
 </html>
