--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -51,6 +51,7 @@
     <center><h1>Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
       <div class="typingStats"></div></center>
+              <p class="footer">&copy; Toasty 2017.</p>
               </div>
   </body>
 </html>
