--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -48,9 +48,11 @@
   });
     </script>
             <div class="rainbow">
+              <div style="padding-top: 50px;">
     <center><h1>Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
       <div class="typingStats"></div></center>
+              </div>
               <div class="footer">&copy; Toasty 2017.</div>
               </div>
   </body>
