--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -19,6 +19,7 @@
             height:100px;
             border:1px solid #000;
             opacity: 0;
+            font-weight: bold;
 }
 
 @keyframes blinking {
@@ -38,7 +39,7 @@
 
     <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.5)
         <br>Type 'help' for a list of commands.
-        <center><span class="blink_me"><b>ERROR: UNDER ATTACK!</b></span></center>
+        <center><span class="blink_me">ERROR: UNDER ATTACK!</span></center>
         <div id="output"></div>
         <br>gavin@localhost:~$
         <input class="wider"></input>
